vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__exit_statement_condition.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::exit_statement, \"exit when condition;\")"
---
ExitStatement
  Keyword(Exit)
  WhenClause
    Keyword(When)
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'condition'
  SemiColon
