vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__exit_statement_loop_label.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::exit_statement, \"exit foo;\")"
---
ExitStatement
  Keyword(Exit)
  Identifier 'foo'
  SemiColon
