vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__for_loop_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::loop_statement,\n\"\\\nfor idx in 0 to 3 loop\n  stmt1;\n  stmt2;\nend loop;\")"
---
LoopStatement
  LoopStatementPreamble
    ForScheme
      Keyword(For)
      ParameterSpecification
        Identifier 'idx'
        Keyword(In)
        BinaryExpression
          LiteralExpression
            AbstractLiteral '0'
          Keyword(To)
          LiteralExpression
            AbstractLiteral '3'
    Keyword(Loop)
  SequenceOfStatements
    ProcedureCallStatement
      Name
        NameDesignatorPrefix
          Identifier 'stmt1'
      SemiColon
    ProcedureCallStatement
      Name
        NameDesignatorPrefix
          Identifier 'stmt2'
      SemiColon
  LoopStatementEpilogue
    Keyword(End)
    Keyword(Loop)
    SemiColon
