vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__full_assert.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::assert_statement,\n\"assert false report \\\"message\\\" severity error;\")"
---
AssertionStatement
  Assertion
    Keyword(Assert)
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'false'
    ReportClause
      Keyword(Report)
      NameExpression
        Name
          NameDesignatorPrefix
            StringLiteral '"message"'
    SeverityClause
      Keyword(Severity)
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'error'
  SemiColon
