vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__labeled_aggregate_variable_assignment.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"name: (foo, 1 => bar) := bar;\")"
---
SimpleVariableAssignment
  StmtLabel
    Identifier 'name'
    Colon
  AggregateTarget
    Aggregate
      LeftPar
      ElementAssociationList
        ElementAssociation
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'foo'
        Comma
        ElementAssociation
          ElementChoices
            Choices
              ExpressionChoice
                LiteralExpression
                  AbstractLiteral '1'
            RightArrow
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'bar'
      RightPar
  ColonEq
  NameExpression
    Name
      NameDesignatorPrefix
        Identifier 'bar'
  SemiColon
