vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__labeled_if_elsif_else_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::if_statement,\n\"\\\nmylabel: if cond = true then\n   foo(1,2);\nelsif cond2 = false then\n   y := 2;\nelse\n   x := 1;\nend if mylabel;\")"
---
IfStatement
  IfStatementPreamble
    StmtLabel
      Identifier 'mylabel'
      Colon
    Keyword(If)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'true'
    Keyword(Then)
  SequentialStatements
    ProcedureCallStatement
      Name
        NameDesignatorPrefix
          Identifier 'foo'
        ParenthesizedName
          LeftPar
          AssociationList
            AssociationElement
              ActualPart
                ActualPartExpression
                  LiteralExpression
                    AbstractLiteral '1'
            Comma
            AssociationElement
              ActualPart
                ActualPartExpression
                  LiteralExpression
                    AbstractLiteral '2'
          RightPar
      SemiColon
  IfStatementElsif
    Keyword(Elsif)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond2'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'false'
    Keyword(Then)
    SequentialStatements
      SimpleVariableAssignment
        NameTarget
          Name
            NameDesignatorPrefix
              Identifier 'y'
        ColonEq
        LiteralExpression
          AbstractLiteral '2'
        SemiColon
  IfStatementElse
    Keyword(Else)
    SequentialStatements
      SimpleVariableAssignment
        NameTarget
          Name
            NameDesignatorPrefix
              Identifier 'x'
        ColonEq
        LiteralExpression
          AbstractLiteral '1'
        SemiColon
  IfStatementEpilogue
    Keyword(End)
    Keyword(If)
    Identifier 'mylabel'
    SemiColon
